--- a/style.css
+++ b/style.css
@@ -6,5 +6,32 @@ body{
     height: 100vh;
     margin: 0;
     font-family: 'Segoe UI', sans-serif;
+}
+
+.calculadora{
+    background-color: #333;
+    padding: 20px;
+    border-radius: 20px;
+    box-shadow: 0 10px 25px rgba(0,0,0,5);
+    width: 320px;
+}
+.visor{
+    background-color: black;
+    color: #0f0;
+    font-size: 36px;
+    text-align: right;
+    padding: 20px;
+    border-radius: 10px;
+    margin-bottom: 20px;
+    box-shadow: inset 0 0 0px #0f0;
+    height: 60px;
+    overflow-x: auto;
+}
+.botoes{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    gap: 10px;
+}
+button{
     
 }
