--- a/style.css
+++ b/style.css
@@ -33,5 +33,12 @@ body{
     gap: 10px;
 }
 button{
-    
+    padding: 20px;
+  font-size: 20px;
+  border: none;
+  border-radius: 10px;
+  background-color: #555;
+  color: white;
+  cursor: pointer;
+  transition: 0.2s;
 }
